--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="https://yoursite.ru/favicon.png" type="image/x-icon">
     <title>Dog</title>
-    <link rel="stylesheet" href="css/style.min.css?_v=20231115190036">
+    <link rel="stylesheet" href="css/style.min.css?_v=20231123205233">
 </head>
 
 <!-- 112 не секция -->
@@ -147,6 +147,15 @@
                         </a>
                     </li>
                 </ul>
+                <svg class="adoption__svg" xmlns="http://www.w3.org/2000/svg">
+                    <defs>
+                        <clipPath id="mask3">
+                            <path
+                                d="M246.655 57.0713C226.208 21.3372 191.384 0 153.499 0C115.615 0 80.7911 21.3372 60.3476 57.0713L11.078 143.177C2.90338 157.462 -0.868459 173.968 0.168103 190.897C1.20466 207.83 6.95602 223.598 16.7982 236.507C26.6472 249.405 39.6614 258.221 54.4333 262.004C69.2052 265.786 84.348 264.171 98.222 257.339L99.1511 256.877C134.061 240.03 173.953 240.185 208.774 257.339C217.756 261.763 227.272 264 236.875 264C242.096 264 247.348 263.336 252.552 262.008C267.324 258.229 280.338 249.413 290.19 236.511C300.036 223.613 305.791 207.841 306.831 190.904C307.871 173.968 304.099 157.466 295.924 143.173L246.655 57.0713Z"
+                                fill="url(#pattern0)" />
+                        </clipPath>
+                    </defs>
+                </svg>
         </section>
 
         <section class="popular section">
@@ -472,7 +481,7 @@
             </div>
         </section>
 
-        <section class="prints">
+        <section class="prints section">
             <div class="container">
                 <div class="prints__wrapper">
                     <div class="prints__item">
@@ -514,17 +523,21 @@
                     <a class="footer__link" href="#">
                         Privacy & About
                     </a>
-                    <a class="footer__link" href="mailto:alaminhossen.75bd@gmail.com">
+                    <div class="footer__text">
                         Contact:
-                        <span>alaminhossen.75bd@gmail.com</span>
-                    </a>
+                        <a class="footer__link footer__link--mail" href="mailto:alaminhossen.75bd@gmail.com">
+                            alaminhossen.75bd@gmail.com
+                        </a>
+                    </div>
                 </div>
-                <div class="footer__item">
-                    <img class="footer__img" src="images/icon/logo-footer.svg" alt="logo">
-                    <div class="social">
+                <div class="footer__item footer__item--logo">
+                    <a class="footer__link" href="#">
+                        <img class="footer__img" src="images/icons/logo-footer.svg" alt="logo">
+                    </a>
+                    <ul class="social">
                         <li class="social__item">
                             <a class="social__link" href="#">
-                                <svg class="social__svg" width="9px" height="17px">
+                                <svg class="social__svg" width="19px" height="17px" fill="#000000">
                                     <use xlink:href="images/sprite.svg#facebook">
                                     </use>
                                 </svg>
@@ -532,7 +545,7 @@
                         </li>
                         <li class="social__item">
                             <a class="social__link" href="#">
-                                <svg class="social__svg" width="16px" height="16px">
+                                <svg class="social__svg" width="16px" height="16px" fill="#000000">
                                     <use xlink:href="images/sprite.svg#ball">
                                     </use>
                                 </svg>
@@ -540,13 +553,13 @@
                         </li>
                         <li class="social__item">
                             <a class="social__link" href="#">
-                                <svg class="social__svg" width="14px" height="12px">
-                                    <use xlink:href="images/sprite.svg#twiter">
+                                <svg class="social__svg" width="14px" height="12px" fill="#000000">
+                                    <use xlink:href="images/sprite.svg#tviter">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                    </div>
+                    </ul>
                 </div>
                 <ul class="footer__items">
                     <li>
@@ -597,15 +610,7 @@
         </defs>
     </svg> -->
 
-    <svg class="adoption__svg" xmlns="http://www.w3.org/2000/svg">
-        <defs>
-            <clipPath id="mask3">
-                <path
-                    d="M246.655 57.0713C226.208 21.3372 191.384 0 153.499 0C115.615 0 80.7911 21.3372 60.3476 57.0713L11.078 143.177C2.90338 157.462 -0.868459 173.968 0.168103 190.897C1.20466 207.83 6.95602 223.598 16.7982 236.507C26.6472 249.405 39.6614 258.221 54.4333 262.004C69.2052 265.786 84.348 264.171 98.222 257.339L99.1511 256.877C134.061 240.03 173.953 240.185 208.774 257.339C217.756 261.763 227.272 264 236.875 264C242.096 264 247.348 263.336 252.552 262.008C267.324 258.229 280.338 249.413 290.19 236.511C300.036 223.613 305.791 207.841 306.831 190.904C307.871 173.968 304.099 157.466 295.924 143.173L246.655 57.0713Z"
-                    fill="url(#pattern0)" />
-            </clipPath>
-        </defs>
-    </svg>
+
 
 
     <!-- <div class="div1"></div> -->
