--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <!-- popular__link-all и ховер не оч-->
 <!-- .button название драцкое -->
 <!-- galety названия картинок модификаторов альтов -->
+<!-- дописать секцион всем блокам в сборке -->
 
 <body>
     <header class="header">
@@ -172,7 +173,6 @@
                 </svg>
             </div>
         </section>
-
 
         <section class="popular section">
             <div class="container">
@@ -381,7 +381,7 @@
                 </svg>
             </div>
         </section>
-         
+
         <section class="gallery section">
             <div class="container">
                 <div class="gallery__wrapper">
@@ -503,7 +503,7 @@
                 </ul>
             </div>
         </section>
-<!--
+
         <section class="prints section">
             <div class="container">
                 <div class="prints__wrapper">
@@ -533,10 +533,10 @@
                     </div>
                 </div>
             </div>
-        </section> --
-    </main> -->
+        </section>
+    </main>
 
-        <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__wrapper">
                 <div class="footer__items">
@@ -606,9 +606,9 @@
                 </ul>
             </div>
         </div>
-    </footer> --> -->
+    </footer> 
 
-        <script src="js/main.min.js?_v=20231115190036"></script>
+    <script src="js/main.min.js?_v=20231115190036"></script>
 </body>
 
 </html>
