--- a/index.html
+++ b/index.html
@@ -438,66 +438,60 @@
                 </h2>
                 <ul class="trust__slider">
                     <li class="trust__item">
-                        <div class="trust__box">
-                            <img class="trust__img" src="images/avatar.png" alt="avatar">
-                            <div class="trust__text">
-                                <p>
-                                    A dog in heat needs more than shade The more people paw prints forever
-                                    on our
-                                    hearts. I
-                                    meet the more I like my dog.Dogs leave paw prints forever on our hearts.
-                                </p>
-                            </div>
-                            <div class="trust__star" data-rateyo-rating="3">
-                            </div>
-                            <h3 class="trust__subtitle">
-                                Margaret Street
-                            </h3>
-                            <div class="trust__subtext">
-                                UI&UX Designer
-                            </div>
+                        <img class="trust__img" src="images/avatar.png" alt="avatar">
+                        <div class="trust__text">
+                            <p>
+                                A dog in heat needs more than shade The more people paw prints forever
+                                on our
+                                hearts. I
+                                meet the more I like my dog.Dogs leave paw prints forever on our hearts.
+                            </p>
+                        </div>
+                        <div class="trust__star" data-rateyo-rating="3">
+                        </div>
+                        <h3 class="trust__subtitle">
+                            Margaret Street
+                        </h3>
+                        <div class="trust__subtext">
+                            UI&UX Designer
                         </div>
                     </li>
                     <li class="trust__item">
-                        <div class="trust__box">
-                            <img class="trust__img" src="images/avatar.png" alt="avatar">
-                            <div class="trust__text">
-                                <p>
-                                    A dog in heat needs more than shade The more people paw prints forever
-                                    on our
-                                    hearts. I
-                                    meet the more I like my dog.Dogs leave paw prints forever on our hearts.
-                                </p>
-                            </div>
-                            <div class="trust__star" data-rateyo-rating="3.5">
-                            </div>
-                            <h3 class="trust__subtitle">
-                                Margaret Street
-                            </h3>
-                            <div class="trust__subtext">
-                                UI&UX Designer
-                            </div>
+                        <img class="trust__img" src="images/avatar.png" alt="avatar">
+                        <div class="trust__text">
+                            <p>
+                                A dog in heat needs more than shade The more people paw prints forever
+                                on our
+                                hearts. I
+                                meet the more I like my dog.Dogs leave paw prints forever on our hearts.
+                            </p>
+                        </div>
+                        <div class="trust__star" data-rateyo-rating="3.5">
+                        </div>
+                        <h3 class="trust__subtitle">
+                            Margaret Street
+                        </h3>
+                        <div class="trust__subtext">
+                            UI&UX Designer
                         </div>
                     </li>
                     <li class="trust__item">
-                        <div class="trust__box">
-                            <img class="trust__img" src="images/avatar.png" alt="avatar">
-                            <div class="trust__text">
-                                <p>
-                                    A dog in heat needs more than shade The more people paw prints forever
-                                    on our
-                                    hearts. I
-                                    meet the more I like my dog.Dogs leave paw prints forever on our hearts.
-                                </p>
-                            </div>
-                            <div class="trust__star" data-rateyo-rating="3.5">
-                            </div>
-                            <h3 class="trust__subtitle">
-                                Margaret Street
-                            </h3>
-                            <div class="trust__subtext">
-                                UI&UX Designer
-                            </div>
+                        <img class="trust__img" src="images/avatar.png" alt="avatar">
+                        <div class="trust__text">
+                            <p>
+                                A dog in heat needs more than shade The more people paw prints forever
+                                on our
+                                hearts. I
+                                meet the more I like my dog.Dogs leave paw prints forever on our hearts.
+                            </p>
+                        </div>
+                        <div class="trust__star" data-rateyo-rating="3.5">
+                        </div>
+                        <h3 class="trust__subtitle">
+                            Margaret Street
+                        </h3>
+                        <div class="trust__subtext">
+                            UI&UX Designer
                         </div>
                     </li>
                 </ul>
@@ -606,7 +600,13 @@
                 </ul>
             </div>
         </div>
-    </footer> 
+    </footer>
+
+    <div class="containers">
+        <div>Элемент 1</div>
+        <div>Элемент 2</div>
+        <div>Элемент 3</div>
+    </div>
 
     <script src="js/main.min.js?_v=20231115190036"></script>
 </body>
