--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     <link rel="stylesheet" href="css/style.min.css?_v=20231123205233">
 </head>
 
-<!-- 112 не секция -->
+<!-- 112 не секция но решил сделать сецией-->
 <!-- добавить сылку в снипеты и сожет быть готывые заготовки блока -->
 <!-- popular альт названия картинок -->
 <!-- сделать снипед слика или написать тчо он легкий -->
 <!-- popular__link-all и ховер не оч-->
-<!-- .button название драцкое -->
+
 <!-- galety названия картинок модификаторов альтов -->
 <!-- дописать секцион всем блокам в сборке -->
+
+<!-- .button название драцкое -->
 
 <body>
     <header class="header">
@@ -601,12 +603,6 @@
             </div>
         </div>
     </footer>
-
-    <div class="containers">
-        <div>Элемент 1</div>
-        <div>Элемент 2</div>
-        <div>Элемент 3</div>
-    </div>
 
     <script src="js/main.min.js?_v=20231115190036"></script>
 </body>
