--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 <!-- galety названия картинок модификаторов альтов -->
 <!-- дописать секцион всем блокам в сборке -->
 
-<!-- .button название драцкое -->
-
 <body>
     <header class="header">
         <div class="container">
@@ -31,28 +29,29 @@
                 </a>
                 <ul class="menu__items">
                     <li class="menu__item">
-                        <a class="menu__link menu__link--active" href="#">
-                            Products
-                        </a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#service">
-                            Dog Care
-                        </a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#collections">
+                        <a class="menu__link" href="#about">
                             About
                         </a>
                     </li>
                     <li class="menu__item">
                         <a class="menu__link" href="#products">
+                            Products
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#dog-Care">
+                            Dog Care
+                        </a>
+                    </li>
+
+                    <li class="menu__item">
+                        <a class="menu__link" href="#popular">
                             Popular
                         </a>
                     </li>
                 </ul>
                 <div class="menu__nav">
-                    <button class="menu__button button" type="button">
+                    <button class="menu__button" type="button">
                         <svg class="button__svg" xmlns="http://www.w3.org/2000/svg" width="17" height="17"
                             viewBox="0 0 15 16" font-size='16px' opacity='0.8' fill='000000' font-family='FontAwesome'>
                             <text id="search" x="-0.112" y="13.072"></text>
@@ -60,7 +59,7 @@
                         <span class="sr-only">button search</span>
                     </button>
                     <span class="sr-only">search</span>
-                    <button class="menu__button button" type="button">
+                    <button class="menu__button" type="button">
                         <svg class="button__svg" xmlns="http://www.w3.org/2000/svg" fill='000000' width="18" height="17"
                             viewBox="0 0 18.94 16.969">
                             <path fill='000000' fill-rule='evenodd'
@@ -89,11 +88,11 @@
                         <h2 class="intro__title title">
                             Dog is my Copilot.
                         </h2>
-                        <div class="intro__inner button">
-                            <button class="button__btn btn" type="button">
+                        <div class="intro__inner box">
+                            <button class="box__btn btn" type="button">
                                 Buy Now
                             </button>
-                            <a class="button__link" href="#">
+                            <a class="box__link" href="#">
                                 See Details
                             </a>
                         </div>
@@ -103,14 +102,14 @@
             </div>
         </section>
 
-        <section class="quality section">
+        <section class="quality section" id="about">
             <div class="container">
                 <h2 class="sr-only">
                     Description of high quality products
                 </h2>
                 <ul class="quality__items">
-                    <li class="quality__item quality__item--bowl">
-                        <a class="quality__link quality__link--bowl" href="#">
+                    <li class="quality__item">
+                        <a class="quality__link" href="#">
                             <div class="quality__images quality__images--bowl">
                                 <img class="quality__img" src="images/bowl_brown.png" alt="Bowl_brown">
                             </div>
@@ -127,8 +126,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="quality__item quality__item--bowl">
-                        <a class="quality__link quality__link--bowl" href="#">
+                    <li class="quality__item">
+                        <a class="quality__link" href="#">
                             <div class="quality__images quality__images--bowl2">
                                 <img class="quality__img" src="images/bowl_green.png" alt="Bowl green">
                             </div>
@@ -145,8 +144,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="quality__item quality__item--bowl">
-                        <a class="quality__link quality__link--bowl" href="#">
+                    <li class="quality__item">
+                        <a class="quality__link" href="#">
                             <div class="quality__images quality__images--bowl3">
                                 <img class="quality__img" src="images/feed.png" alt="Feed">
                             </div>
@@ -176,7 +175,7 @@
             </div>
         </section>
 
-        <section class="popular section">
+        <section class="popular section" id="products">
             <div class="container">
                 <h2 class="popular__title">
                     Popular Products
@@ -264,13 +263,15 @@
                         </a>
                     </article>
                 </div>
-                <a class="popular__link-all" href="#">
-                    View All Products
-                </a>
+                <div class="popular__wrap">
+                    <a class="popular__view" href="#">
+                        View All Products
+                    </a>
+                </div>
             </div>
         </section>
 
-        <section class="adoption section">
+        <section class="adoption section" id="dog-Care">
             <div class="container">
                 <div class="adoption__wrapper">
                     <img class="adoption__img img" src="images/inspection.png.jfif" alt="">
@@ -301,11 +302,11 @@
                                 my Dogs leave paw prints forever on our hearts.
                             </p>
                         </div>
-                        <div class="adoption__inner button">
-                            <button class="button__btn btn" type="button">
+                        <div class="adoption__inner box">
+                            <button class="box__btn btn" type="button">
                                 Buy Now
                             </button>
-                            <a class="button__link" href="#">
+                            <a class="box__link" href="#">
                                 See Details
                             </a>
                         </div>
@@ -319,51 +320,53 @@
                 <h2 class="subscription__title">
                     How the Monthly Subscription Work?
                 </h2>
-                <ul class="subscription__items quality">
-                    <li class="quality__item">
-                        <a class="quality__link" href="#">
-                            <img class="quality__img quality__img--dog1" src="images/dog1.jpg" alt="Bowl brown">
-                            <h3 class="quality__subtitle">
+                <ul class="subscription__items">
+                    <li class="subscription__item">
+                        <a class="subscription__link" href="#">
+                            <img class="subscription__img subscription__img--dog1" src="images/dog1.jpg"
+                                alt="Bowl brown">
+                            <h3 class="subscription__subtitle">
                                 Best Quality Products Pen Foods
                             </h3>
-                            <div class="quality__text">
+                            <div class="subscription__text">
                                 <p>
                                     Dogs leave paw prints forever on our hearts. A dog shade the.
                                 </p>
                             </div>
-                            <div class="quality__subtext">
+                            <div class="subscription__subtext">
                                 See Details
                             </div>
                         </a>
                     </li>
-                    <li class="quality__item">
-                        <a class="quality__link" href="#">
-                            <img class="quality__img quality__img--dog2" src="images/dog2.jpg" alt="Bowl brown">
-                            <h3 class="quality__subtitle">
+                    <li class="subscription__item">
+                        <a class="subscription__link" href="#">
+                            <img class="subscription__img subscription__img--dog2" src="images/dog2.jpg"
+                                alt="Bowl brown">
+                            <h3 class="subscription__subtitle">
                                 Best Quality Products Pen Foods
                             </h3>
-                            <div class="quality__text">
+                            <div class="subscription__text">
                                 <p>
                                     Dogs leave paw prints forever on our hearts. A dog shade the.
                                 </p>
                             </div>
-                            <div class="quality__subtext">
+                            <div class="subscription__subtext">
                                 See Details
                             </div>
                         </a>
                     </li>
-                    <li class="quality__item">
-                        <a class="quality__link" href="#">
-                            <img class="quality__img quality__img--dog3" src="images/dog3.jpg" alt="dog3">
-                            <h3 class="quality__subtitle">
+                    <li class="subscription__item">
+                        <a class="subscription__link" href="#">
+                            <img class="subscription__img subscription__img--dog3" src="images/dog3.jpg" alt="dog3">
+                            <h3 class="subscription__subtitle">
                                 Best Quality Products Pen Foods
                             </h3>
-                            <div class="quality__text">
+                            <div class="subscription__text">
                                 <p>
                                     Dogs leave paw prints forever on our hearts. A dog shade the.
                                 </p>
                             </div>
-                            <div class="quality__subtext">
+                            <div class="subscription__subtext">
                                 See Details
                             </div>
                         </a>
@@ -384,7 +387,7 @@
             </div>
         </section>
 
-        <section class="gallery section">
+        <section class="gallery section" id="popular">
             <div class="container">
                 <div class="gallery__wrapper">
                     <div class="gallery__left">
