--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
     </header>
 
-     <main class="main">
+    <main class="main">
         <section class="intro">
             <div class="container">
                 <div class="intro__wrapper">
@@ -427,7 +427,8 @@
                         </ul>
                     </div>
                     <div class="gallery__item gallery__item--5">
-                        <a class="gallery__link" href="images/gallery/5.jpg" data-fancybox="gallery">
+                        <a class="gallery__link gallery__link--5" href="images/gallery/leash5.jpg"
+                            data-fancybox="gallery">
                             <img class="gallery__img gallery__img--big" src="images/gallery/leash5.png" alt="leash5">
                         </a>
                     </div>
@@ -549,12 +550,15 @@
                         </a>
                     </div>
                     <div class="footer__item">
-                        <a class="footer__link" href="mailto:alaminhossen.75bd@gmail.com">
-                            Contact: alaminhossen.75bd@gmail.com
-                        </a>
+                        <div class="footer__text">
+                            Contact:
+                            <a class="footer__link footer__link--mail" href="mailto:alaminhossen.75bd@gmail.com">
+                                alaminhossen.75bd@gmail.com
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="footer__item footer__item--logo">
+                <div class="footer__box">
                     <a class="footer__logo logo" href="#">
                         <img class="logo__img" src="images/icons/logo-footer.svg" alt="logo">
                     </a>
@@ -585,7 +589,7 @@
                         </li>
                     </ul>
                 </div>
-                <ul class="footer__items">
+                <ul class="footer__items footer__items--care">
                     <li class="footer__item">
                         <a class="footer__link" href="#">
                             Dog Care
@@ -604,7 +608,7 @@
                 </ul>
             </div>
         </div>
-    </footer> 
+    </footer>
 
     <script src="js/main.min.js?_v=20231115190036"></script>
 </body>
