--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <header class="header">
         <div class="container">
             <nav class="menu">
-                <a class="menu__logo" href="#">
-                    <img class="menu__img logo" src="images/icons/logo.svg" alt="logo">
+                <a class="menu__link" href="#">
+                    <img class="menu__img" src="images/icons/logo.svg" alt="logo">
                 </a>
                 <ul class="menu__items">
                     <li class="menu__item">
@@ -186,7 +186,7 @@
                     </p>
                 </div>
                 <div class="popular__wrapper">
-                    <article class="popular__article popular__article--big">
+                    <article class="popular__article">
                         <a class="popular__link" href="#">
                             <div class="popular__images">
                                 <img class="popular__big" src="images/leash_blue.png" alt="Leash blue">
@@ -201,7 +201,7 @@
                             </div>
                         </a>
                     </article>
-                    <article class="popular__article popular__article--big">
+                    <article class="popular__article">
                         <a class="popular__link" href="#">
                             <div class="popular__images">
                                 <img class="popular__big" src="images/leash2.png" alt="leash2">
@@ -374,10 +374,12 @@
                 <button class="subscription__btn" type="button">
                     Subscribe
                 </button>
-                <svg class="sr-only" xmlns="http://www.w3.org/2000/svg">
+                <svg class="sr-only" width="250px" height="270px" xmlns="http://www.w3.org/2000/svg">
                     <defs>
+                        <!-- width:315px;
+                        height: 270px; -->
                         <clipPath id="mask3">
-                            <path
+                            <path 
                                 d="M246.655 57.0713C226.208 21.3372 191.384 0 153.499 0C115.615 0 80.7911 21.3372 60.3476 57.0713L11.078 143.177C2.90338 157.462 -0.868459 173.968 0.168103 190.897C1.20466 207.83 6.95602 223.598 16.7982 236.507C26.6472 249.405 39.6614 258.221 54.4333 262.004C69.2052 265.786 84.348 264.171 98.222 257.339L99.1511 256.877C134.061 240.03 173.953 240.185 208.774 257.339C217.756 261.763 227.272 264 236.875 264C242.096 264 247.348 263.336 252.552 262.008C267.324 258.229 280.338 249.413 290.19 236.511C300.036 223.613 305.791 207.841 306.831 190.904C307.871 173.968 304.099 157.466 295.924 143.173L246.655 57.0713Z"
                                 fill="url(#pattern0)" />
                         </clipPath>
@@ -559,8 +561,8 @@
                     </div>
                 </div>
                 <div class="footer__box">
-                    <a class="footer__logo logo" href="#">
-                        <img class="logo__img" src="images/icons/logo-footer.svg" alt="logo">
+                    <a class="footer__link" href="#">
+                        <img class="footer__img" src="images/icons/logo-footer.svg" alt="logo">
                     </a>
                     <ul class="social">
                         <li class="social__item">
