--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- 112 не секция но решил сделать сецией-->
 <!-- добавить сылку в снипеты и сожет быть готывые заготовки блока -->
 <!-- popular альт названия картинок -->
-
+google-site-verification: google4b2678ff6e983369.html
 
 <!-- galety названия картинок модификаторов альтов -->
 <!-- дописать секцион всем блокам в сборке -->
